--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -72,6 +72,6 @@ body {
   animation: animatedgradient 3s ease alternate infinite;
 }
 
-::-webkit-scrollbar {
+container::-webkit-scrollbar {
   display: none;
 }
